code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_3.wast
(assert_invalid
  (module
    (func $arity-0-vs-1 (call 1))
    (func (param i32))
  )
  "type mismatch"
)